--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,10 @@
 Arash tasks:
  - Add font awesome to project
  - Change font type to "Poppins"
- - 
+ - Added the next fuctionality audio when click the next btn forward 5sec
 
 
 
 Hussein tasks:
  - ...
  - ...
- 
